Changed GitHub paths

--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
 		@Styles.Render("~/Content/css")
 	</head>
 	<body>
-		<a href="https://github.com/doodack/light-grid">
+		<a href="https://github.com/michaldudak/light-grid">
 			<img style="position: absolute; top: 60px; right: 0; border: 0; z-index: 1001" src="~/Content/forkme.png" alt="Fork me on GitHub">
 		</a>
 		<div class="navbar navbar-default navbar-fixed-top">
@@ -36,16 +36,16 @@
 			@RenderBody()
 			<hr />
 			<footer>
-				<p>Code licensed under <a href="https://github.com/doodack/light-grid/blob/master/LICENSE">the MIT license</a>.</p>
+				<p>Code licensed under <a href="https://github.com/michaldudak/light-grid/blob/master/LICENSE">the MIT license</a>.</p>
 				<p>
-					<iframe src="http://ghbtns.com/github-btn.html?user=doodack&repo=light-grid&type=watch&count=true"
-					        allowtransparency="true" frameborder="0" scrolling="0" width="85" height="20"></iframe>
-					<iframe src="http://ghbtns.com/github-btn.html?user=doodack&repo=light-grid&type=fork&count=true"
-					        allowtransparency="true" frameborder="0" scrolling="0" width="85" height="20"></iframe>
-					<iframe src="http://ghbtns.com/github-btn.html?user=doodack&repo=light-grid&type=follow&count=true"
-					        allowtransparency="true" frameborder="0" scrolling="0" width="160" height="20"></iframe>
+					<iframe src="http://ghbtns.com/github-btn.html?user=michaldudak&repo=light-grid&type=watch&count=true"
+									allowtransparency="true" frameborder="0" scrolling="0" width="85" height="20"></iframe>
+					<iframe src="http://ghbtns.com/github-btn.html?user=michaldudak&repo=light-grid&type=fork&count=true"
+									allowtransparency="true" frameborder="0" scrolling="0" width="85" height="20"></iframe>
+					<iframe src="http://ghbtns.com/github-btn.html?user=michaldudak&repo=light-grid&type=follow&count=true"
+									allowtransparency="true" frameborder="0" scrolling="0" width="160" height="20"></iframe>
 				</p>
-				<p><small>&copy; @DateTime.Now.Year - <a href="http://dudak.pl">Michał Dudak</a> | <a href="http://digitalcreations.pl">Digital Creations</a></small></p>
+				<p><small>&copy; @DateTime.Now.Year - <a href="http://dudak.me">Michał Dudak</a> | <a href="http://digitalcreations.pl">Digital Creations</a></small></p>
 			</footer>
 		</div>
 
