--- a/Web/Views/Home/Download.cshtml
+++ b/Web/Views/Home/Download.cshtml
@@ -5,6 +5,6 @@
 
 <p>
 	Well, about that... The Light Grid is still quite unstable, so there's no official version to download yet.
-	For now, you can <a href="https://github.com/doodack/light-grid">grab it directly from GitHub</a>.
+	For now, you can <a href="https://github.com/michaldudak/light-grid">grab it directly from GitHub</a>.
 	But I promise, as soon as it gets ready to use, I'll make it available here.
 </p>
