--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -26,6 +26,6 @@
 	</div>
 	<div class="col-md-4">
 		<h2>Contributing</h2>
-		<p>Once the Grid becomes quite stable, I'll start accepting pull requests. For now, you can <a href="https://github.com/doodack/light-grid">take a look at the code on GitHub</a>.</p>
+		<p>Once the Grid becomes quite stable, I'll start accepting pull requests. For now, you can <a href="https://github.com/michaldudak/light-grid">take a look at the code on GitHub</a>.</p>
 	</div>
 </div>
