--- a/Web/Views/Demos/expandedRow.cshtml
+++ b/Web/Views/Demos/expandedRow.cshtml
@@ -1,18 +1,6 @@
 ﻿<script>
-	function expandedRowController($scope) {
-		$scope.model = [{
-				make: "Honda",
-				model: "CBF 1000F",
-				engine: "1000ccm R4"
-			}, {
-				make: "BMW",
-				model: "F800 GT",
-				engine: "800ccm R2"
-			}, {
-				make: "Suzuki",
-				model: "V-Strom 1000",
-				engine: "1000ccm V2"
-			}];
+	function expandedRowController($scope, sampleModel) {
+		$scope.model = sampleModel;
 	}
 </script>
 
@@ -26,13 +14,13 @@
 
 <h2>Expanding rows</h2>
 
-<div data-ng-controller="expandedRowController">
-	<table data-light-grid id="sampleGrid" class="table" data="model">
-		<tr data-lg-column-templates>
-			<td data-lg-column title="'Make'">{{ rowData.make }}</td>
-			<td data-lg-column title="'Model'">{{ rowData.model }}</td>
-			<td data-lg-column title="'Engine'">{{ rowData.engine }}</td>
-			<td data-lg-column><button data-lg-toggle-expanded-row="detailsTemplate.html" class="btn btn-default btn-sm">Details</button></td>
+<div ng-controller="expandedRowController">
+	<table light-grid id="sampleGrid" class="table table-striped" model="model">
+		<tr lg-column-templates>
+			<td lg-column title="'Make'">{{ rowData.make }}</td>
+			<td lg-column title="'Model'">{{ rowData.model }}</td>
+			<td lg-column title="'Engine'">{{ rowData.engine }}</td>
+			<td lg-column><button lg-toggle-expanded-row="detailsTemplate.html" class="btn btn-default btn-sm">Details</button></td>
 		</tr>
 	</table>
 </div>
