--- a/Web/Views/Home/Demos.cshtml
+++ b/Web/Views/Home/Demos.cshtml
@@ -16,6 +16,9 @@
 					<li><a href="#/local-editable-row">Editable row (local)</a></li>
 					<li><a href="#/sortable-columns">Sortable columns</a></li>
 					<li><a href="#/client-side-search">Client-side search</a></li>
+					<li><a href="#/client-side-paging">Client-side paging</a></li>
+					<li><a href="#/hidden-columns">Hidden columns</a></li>
+					<li><a href="#/fully-featured-local">Fully featured (local data)</a></li>
 				</ul>
 			</div>
 		</div>
@@ -25,10 +28,8 @@
 	</div>
 </div>
 
-
 @section scripts
 {
-	<script src="~/Scripts/angular-route.min.js"></script>
-	<script src="~/Scripts/light-grid-0.0.0.js"></script>
+	<script src="~/Scripts/light-grid.js"></script>
 	<script src="~/Scripts/demoApp.js"></script>
 }
