--- a/Web/Views/Demos/sortableColumns.cshtml
+++ b/Web/Views/Demos/sortableColumns.cshtml
@@ -1,30 +1,18 @@
 ﻿<script>
-	function sortableColumnsController($scope) {
-		$scope.model = [{
-				make: "Honda",
-				model: "CBF 1000F",
-				engine: "1000ccm R4"
-			}, {
-				make: "BMW",
-				model: "F800 GT",
-				engine: "800ccm R2"
-			}, {
-				make: "Suzuki",
-				model: "V-Strom 1000",
-				engine: "1000ccm V2"
-			}];
+	function sortableColumnsController($scope, sampleModel, lgLocalDataProviderFactory) {
+		$scope.model = sampleModel;
+		$scope.dataProvider = lgLocalDataProviderFactory.create(sampleModel);
 	}
 </script>
 
 <h2>Sortable columns</h2>
 
-<div data-ng-controller="sortableColumnsController">
-	<table data-light-grid id="sampleGrid" class="table">
-		<tr data-lg-local-data-provider data-model="model"></tr>
-		<tr data-lg-column-templates>
-			<td data-lg-sortable-column data-property="make" title="'Make'"></td>
-			<td data-lg-sortable-column data-property="model" title="'Model'"></td>
-			<td data-lg-sortable-column data-property="engine" title="'Engine'"></td>
+<div ng-controller="sortableColumnsController">
+	<table light-grid id="sampleGrid" class="table table-striped" model="dataProvider.getGridModel()">
+		<tr lg-column-templates>
+			<td lg-sortable-column property="make" title="'Make'" data-provider="dataProvider"></td>
+			<td lg-sortable-column property="model" title="'Model'" data-provider="dataProvider"></td>
+			<td lg-sortable-column property="engine" title="'Engine'" data-provider="dataProvider"></td>
 		</tr>
 	</table>
 </div>
