--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -36,15 +36,19 @@
 			@RenderBody()
 			<hr />
 			<footer>
-				<p>Code licensed under <a href="https://github.com/michaldudak/light-grid/blob/master/LICENSE">the MIT license</a>.</p>
+				<p>Light grid is licensed under <a href="https://github.com/michaldudak/light-grid/blob/master/LICENSE">the MIT license</a>.</p>
 				<p>
 					<iframe src="http://ghbtns.com/github-btn.html?user=michaldudak&repo=light-grid&type=watch&count=true"
-									allowtransparency="true" frameborder="0" scrolling="0" width="85" height="20"></iframe>
+					        allowtransparency="true" frameborder="0" scrolling="0" width="85" height="20"></iframe>
 					<iframe src="http://ghbtns.com/github-btn.html?user=michaldudak&repo=light-grid&type=fork&count=true"
-									allowtransparency="true" frameborder="0" scrolling="0" width="85" height="20"></iframe>
+					        allowtransparency="true" frameborder="0" scrolling="0" width="85" height="20"></iframe>
 					<iframe src="http://ghbtns.com/github-btn.html?user=michaldudak&repo=light-grid&type=follow&count=true"
-									allowtransparency="true" frameborder="0" scrolling="0" width="160" height="20"></iframe>
+					        allowtransparency="true" frameborder="0" scrolling="0" width="160" height="20"></iframe>
 				</p>
+				<p>
+					This website is licensed under <a href="https://github.com/michaldudak/light-grid/blob/master/LICENSE">the MIT license</a>. <a href="https://github.com/michaldudak/light-grid-home">Contributions are welcome!</a>
+				</p>
+				<p>Using <a href="https://bootswatch.com/flatly">Flatly theme from Bootswatch</a>.</p>
 				<p><small>&copy; @DateTime.Now.Year - <a href="http://dudak.me">Michał Dudak</a> | <a href="http://digitalcreations.pl">Digital Creations</a></small></p>
 			</footer>
 		</div>
