--- a/Web/Views/Home/Overview.cshtml
+++ b/Web/Views/Home/Overview.cshtml
@@ -2,5 +2,14 @@
 	ViewBag.Title = "Overview";
 }
 <h1>Overview</h1>
-
-<p>Lorem ipsum dolor sit amet...</p>
+<p>Light Grid is a simple, lightweight grid build for Angular JS. Currently (as of 0.1 version) it supports client-side operations only, but its architecture allows to extend it. Server operations support is planned for the 0.h2 release.</p>
+<p>Take a look at the @Html.ActionLink("demos", "Demos", "Home") to see it in action.</p>
+<h2>Features</h2>
+<ul>
+	<li>paging</li>
+	<li>sorting</li>
+	<li>search</li>
+	<li>expandable details</li>
+	<li>dynamic column visibility</li>
+	<li>inline data edit</li>
+</ul>
