--- a/Web/Views/Home/Overview.cshtml
+++ b/Web/Views/Home/Overview.cshtml
@@ -6,6 +6,7 @@
 <p>Take a look at the @Html.ActionLink("demos", "Demos", "Home") to see it in action.</p>
 <h2>Features</h2>
 <ul>
+	<li>custom cell templates</li>
 	<li>paging</li>
 	<li>sorting</li>
 	<li>search</li>
