--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 	<p class="lead">Light Grid is a simple to use grid component for <a href="http://angularjs.org">Angular JS</a>. It's designed with extensibility and ease of customization in mind.</p>
 	<p>
 		<a class="btn btn-primary" href="@Url.Action("Overview")">See overview &raquo;</a>
-		<a class="btn btn-success" href="@Url.Action("Download")">Download &raquo;</a>
+		<a class="btn btn-success" href="https://github.com/michaldudak/light-grid/releases/latest" target="_blank">Download latest version &raquo;</a>
 	</p>
 </div>
 
@@ -26,6 +26,10 @@
 	</div>
 	<div class="col-md-4">
 		<h2>Contributing</h2>
-		<p>Once the Grid becomes quite stable, I'll start accepting pull requests. For now, you can <a href="https://github.com/michaldudak/light-grid">take a look at the code on GitHub</a>.</p>
+		<p>
+			Pull requests are welcome! Just <a href="https://github.com/michaldudak/light-grid/fork">fork the project</a> and do something awesome with it! Just make sure your code complies with the code style rules and passes all the tests.
+			See <a href="https://github.com/michaldudak/light-grid/blob/master/readme.md" target="_blank">the readme file on GitHub</a> for more details.
+		</p>
+		<p><a class="btn btn-default" href="https://github.com/michaldudak/light-grid">See the source &raquo;</a></p>
 	</div>
 </div>
