--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
 						<li>@Html.ActionLink("Overview", "Overview", "Home")</li>
 						<li>@Html.ActionLink("Demos", "Demos", "Home")</li>
 						<li>@Html.ActionLink("Docs", "API", "Home")</li>
-						<li>@Html.ActionLink("Download", "Download", "Home")</li>
+						<li><a href="https://github.com/michaldudak/light-grid/releases">Downloads</a></li>
 					</ul>
 				</div>
 			</div>
@@ -46,7 +46,7 @@
 					        allowtransparency="true" frameborder="0" scrolling="0" width="160" height="20"></iframe>
 				</p>
 				<p>
-					This website is licensed under <a href="https://github.com/michaldudak/light-grid/blob/master/LICENSE">the MIT license</a>. <a href="https://github.com/michaldudak/light-grid-home">Contributions are welcome!</a>
+					This website is licensed under <a href="https://github.com/michaldudak/light-grid-home/blob/master/LICENSE">the MIT license</a>. <a href="https://github.com/michaldudak/light-grid-home">Contributions are welcome!</a>
 				</p>
 				<p>Using <a href="https://bootswatch.com/flatly">Flatly theme from Bootswatch</a>.</p>
 				<p><small>&copy; @DateTime.Now.Year - <a href="http://dudak.me">Michał Dudak</a> | <a href="http://digitalcreations.pl">Digital Creations</a></small></p>
