--- a/Web/Views/Shared/Error.cshtml
+++ b/Web/Views/Shared/Error.cshtml
@@ -1,17 +1,6 @@
 ﻿@{
-	Layout = null;
+	ViewBag.Title = "Error";
 }
 
-<!DOCTYPE html>
-<html>
-<head>
-	<meta name="viewport" content="width=device-width" />
-	<title>Error</title>
-</head>
-<body>
-	<hgroup>
-		<h1>Error.</h1>
-		<h2>An error occurred while processing your request.</h2>
-	</hgroup>
-</body>
-</html>
+<h1>:(</h1>
+<p>Looks like something broke down... We'll look into it.</p>
