--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 	<p class="lead">Light Grid is a simple to use grid component for <a href="http://angularjs.org">Angular JS</a>. It's designed with extensibility and ease of customization in mind.</p>
 	<p>
 		<a class="btn btn-primary" href="@Url.Action("Overview")">See overview &raquo;</a>
-		<a class="btn btn-success" href="https://github.com/michaldudak/light-grid/releases/latest" target="_blank">Download latest version &raquo;</a>
+		<a class="btn btn-success" href="https://github.com/michaldudak/light-grid/releases/latest" target="_blank">Download the latest version &raquo;</a>
 	</p>
 </div>
 
