Corrected errors in samples

--- a/Web/Views/Docs/lightGrid/lgColumn.cshtml
+++ b/Web/Views/Docs/lightGrid/lgColumn.cshtml
@@ -28,12 +28,12 @@
 
 <h3>Examples</h3>
 <pre ng-non-bindable>
-&lt;lightgrid model="myModel" id="myGrid"&gt;
-	&lt;lgcolumn title="'Name'"&gt;
+&lt;light-grid model="myModel" id="myGrid"&gt;
+	&lt;lg-column title="'Name'"&gt;
 		{{ rowData.name }}
-	&lt;/lgcolumn&gt;
-	&lt;lgcolumn title="'Address'"&gt;
+	&lt;/lg-column&gt;
+	&lt;lg-column title="'Address'"&gt;
 		{{ rowData.address }}
-	&lt;/lgcolumn&gt;
-&lt;/lightgrid&gt;
+	&lt;/lg-column&gt;
+&lt;/light-grid&gt;
 </pre>
