--- a/Web/Views/Docs/lightGrid/lightGrid.cshtml
+++ b/Web/Views/Docs/lightGrid/lightGrid.cshtml
@@ -34,7 +34,11 @@
 </table>
 
 <h3>Examples</h3>
+<h4>Custom <code>light-grid</code> element</h4>
 <pre>
 &lt;light-grid model="myModel" id="myGrid"&gt;&lt;/light-grid&gt;
-&lt;table light-grid id="myGrid" model="myModel"&gt;&lt;/table&gt;
+</pre>
+<h4>Fully HTML-compliant markup</h4>
+<pre>
+&lt;table data-light-grid id="myGrid" data-model="myModel"&gt;&lt;/table&gt;
 </pre>
