Added logo author info to the footer

--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -50,7 +50,13 @@
 				This website is licensed under <a href="https://github.com/michaldudak/light-grid-home/blob/master/LICENSE">the MIT license</a>. <a href="https://github.com/michaldudak/light-grid-home">Contributions are welcome!</a>
 			</p>
 			<p>Using <a href="https://bootswatch.com/flatly">Flatly theme from Bootswatch</a>.</p>
-			<p><small>&copy; @DateTime.Now.Year - <a href="http://dudak.me">Michał Dudak</a> | <a href="http://digitalcreations.pl">Digital Creations</a></small></p>
+			<p>
+				<small>
+					Logo designed by <a href="http://karolinapacholczyk.pl">Karolina Pacholczyk</a> |
+					Website &copy; @DateTime.Now.Year - <a href="http://dudak.me">Michał Dudak</a> |
+					<a href="http://digitalcreations.pl">Digital Creations</a>
+				</small>
+			</p>
 		</footer>
 	</div>
 
