--- a/Web/Views/Home/Overview.cshtml
+++ b/Web/Views/Home/Overview.cshtml
@@ -4,7 +4,7 @@
 <h1>Overview</h1>
 <p>
 	Light Grid is a simple, lightweight grid build for Angular JS. Currently (as of 0.1 version) it supports client-side operations only,
-	but its architecture allows to author extensions with ease. Out-of-the-box server operations support is planned for the 0.h2 release.
+	but its architecture allows to author extensions with ease. Out-of-the-box server operations support is planned for the 0.2 release.
 </p>
 <p>Take a look at the @Html.ActionLink("demos", "Demos", "Home") to see it in action.</p>
 
