--- a/Web/Views/Demos/simplest.cshtml
+++ b/Web/Views/Demos/simplest.cshtml
@@ -7,7 +7,7 @@
 <h2>The simplest grid</h2>
 
 <div ng-controller="simplestGridController">
-	<table light-grid id="sampleGrid" class="table table-striped" model="model">
+	<table lg-grid id="sampleGrid" class="table table-striped" model="model">
 		<tr lg-column-templates>
 			<td lg-column title="'Make'">{{ rowData.make }}</td>
 			<td lg-column title="'Model'">{{ rowData.model }}</td>
