--- a/Web/Views/Demos/clientSideSearch.cshtml
+++ b/Web/Views/Demos/clientSideSearch.cshtml
@@ -17,7 +17,7 @@
 			<input type="text" ng-model="filterExpression" class="form-control" placeholder="type here to search" />
 		</div>
 	</div>
-	<table light-grid id="sampleGrid" class="table table-striped" model="dataProvider.getGridModel()">
+	<table lg-grid id="sampleGrid" class="table table-striped" model="dataProvider.getGridModel()">
 		<tr lg-column-templates>
 			<td lg-column title="'Make'">{{ rowData.make }}</td>
 			<td lg-column title="'Model'">{{ rowData.model }}</td>
