--- a/Web/Views/Demos/expandedRow.cshtml
+++ b/Web/Views/Demos/expandedRow.cshtml
@@ -15,7 +15,7 @@
 <h2>Expanding rows</h2>
 
 <div ng-controller="expandedRowController">
-	<table light-grid id="sampleGrid" class="table table-striped" model="model">
+	<table lg-grid id="sampleGrid" class="table table-striped" model="model">
 		<tr lg-column-templates>
 			<td lg-column title="'Make'">{{ rowData.make }}</td>
 			<td lg-column title="'Model'">{{ rowData.model }}</td>
