--- a/Web/Views/Demos/hiddenColumns.cshtml
+++ b/Web/Views/Demos/hiddenColumns.cshtml
@@ -8,7 +8,7 @@
 <h2>Hidden columns</h2>
 
 <div ng-controller="hiddenColumnGridController">
-	<table light-grid id="sampleGrid" class="table table-striped" model="model">
+	<table lg-grid id="sampleGrid" class="table table-striped" model="model">
 		<tr lg-column-templates>
 			<td lg-column title="'Make'">{{ rowData.make }}</td>
 			<td lg-column title="'Model'">{{ rowData.model }}</td>
