--- a/Web/Views/Demos/serverSideProcessing.cshtml
+++ b/Web/Views/Demos/serverSideProcessing.cshtml
@@ -1,32 +1,23 @@
 ﻿<script>
-	function everythingLocalController($scope, $http, lgLocalDataProviderFactory) {
-		$scope.dataProvider = lgLocalDataProviderFactory.create([]);
+	function serverSideProcessingController($scope, $http, lgServerDataProviderFactory) {
+		$scope.dataProvider = lgServerDataProviderFactory.create("/Demos/SampleData");
 		$scope.dataProvider.limitTo(10);
 
 		$scope.$watch("filterExpression", function () {
 			$scope.dataProvider.filter($scope.filterExpression);
 		});
-
-		$scope.loadData = function () {
-			$http.get("Data/zips.json").success(function (data) {
-				$scope.dataProvider.setModel(data);
-			});
-		};
 	}
 </script>
 
-<h2>Fully featured grid based on local data</h2>
+<h2>Fully featured grid based on remote data</h2>
 
 <p>
 	The following sample presents an editable grid with sorting, paging and filtering features.
 	It is backed by an array with almost 30000 elements (US zip codes taken from <a rel="nofollow" href="http://jsonstudio.com/resources">http://jsonstudio.com/resources</a>).
 </p>
 
-<div ng-controller="everythingLocalController">
+<div ng-controller="serverSideProcessingController">
 	<div class="btn-toolbar">
-		<div class="btn-group">
-			<button ng-click="loadData()" class="btn btn-default">Load data (~3MB)</button>
-		</div>
 		<div class="btn-group">
 			<input type="text" ng-model="filterExpression" ng-model-options="{debounce: 150}" class="form-control" placeholder="type here to search" />
 		</div>
@@ -117,16 +108,16 @@
 			</td>
 			<td lg-column>
 				<div lg-view>
-					<button class="btn btn-default btn-sm" switch-view="edit">Edit</button>
+					<button class="btn btn-default btn-sm" lg-switch-view="edit">Edit</button>
 					<button lg-toggle-expanded-row="detailsTemplate.html" class="btn btn-default btn-sm">Details</button>
 				</div>
 				<div lg-view="edit">
-					<button class="btn btn-primary btn-sm" persist-data data-provider="dataProvider">Save</button>
-					<button class="btn btn-default btn-sm" switch-view="read">Cancel</button>
+					<button class="btn btn-primary btn-sm" lg-persist-data data-provider="dataProvider">Save</button>
+					<button class="btn btn-default btn-sm" lg-switch-view="read">Cancel</button>
 					<button lg-toggle-expanded-row="detailsTemplate.html" class="btn btn-default btn-sm">Details</button>
 				</div>
 			</td>
 		</tr>
 	</table>
-	<lg-pager data-provider="dataProvider"></lg-pager>
+	<lg-pager data-provider="dataProvider" page-size-options="10,20,50,100"></lg-pager>
 </div>
