--- a/Web/Views/Demos/sortableColumns.cshtml
+++ b/Web/Views/Demos/sortableColumns.cshtml
@@ -8,7 +8,7 @@
 <h2>Sortable columns</h2>
 
 <div ng-controller="sortableColumnsController">
-	<table light-grid id="sampleGrid" class="table table-striped" model="dataProvider.getGridModel()">
+	<table lg-grid id="sampleGrid" class="table table-striped" model="dataProvider.getGridModel()">
 		<tr lg-column-templates>
 			<td lg-sortable-column property="make" title="'Make'" data-provider="dataProvider"></td>
 			<td lg-sortable-column property="model" title="'Model'" data-provider="dataProvider"></td>
