--- a/Web/Views/Home/Demos.cshtml
+++ b/Web/Views/Home/Demos.cshtml
@@ -19,6 +19,7 @@
 					<li><a href="#/client-side-paging">Client-side paging</a></li>
 					<li><a href="#/hidden-columns">Hidden columns</a></li>
 					<li><a href="#/fully-featured-local">Fully featured (local data)</a></li>
+					<li><a href="#/server-side-processing">Server-side processing</a></li>
 				</ul>
 			</div>
 		</div>
