Added 'lg' prefix to all directives in docs

--- a/Web/Views/Docs/lightGrid/lgColumn.cshtml
+++ b/Web/Views/Docs/lightGrid/lgColumn.cshtml
@@ -28,12 +28,12 @@
 
 <h3>Examples</h3>
 <pre ng-non-bindable>
-&lt;light-grid model="myModel" id="myGrid"&gt;
+&lt;lg-grid model="myModel" id="myGrid"&gt;
 	&lt;lg-column title="'Name'"&gt;
 		{{ rowData.name }}
 	&lt;/lg-column&gt;
 	&lt;lg-column title="'Address'"&gt;
 		{{ rowData.address }}
 	&lt;/lg-column&gt;
-&lt;/light-grid&gt;
+&lt;/lg-grid&gt;
 </pre>
