--- a/Web/Views/Docs/lightGrid/lgGrid.cshtml
+++ b/Web/Views/Docs/lightGrid/lgGrid.cshtml
@@ -1,7 +1,7 @@
-﻿<h2><code>lightGrid</code> directive</h2>
+﻿<h2><code>lgGrid</code> directive</h2>
 
 <p>
-	The <code>lightGrid</code> is the main directive. It is used to define a grid. Configuration is done via its subdirectives.
+	The <code>lgGrid</code> is the main directive. It is used to define a grid. Configuration is done via its subdirectives.
 	It can be used either as a custom tag or on a <code>table</code> tag.
 </p>
 
@@ -34,11 +34,11 @@
 </table>
 
 <h3>Examples</h3>
-<h4>Custom <code>light-grid</code> element</h4>
+<h4>Custom <code>lg-grid</code> element</h4>
 <pre>
-&lt;light-grid model="myModel" id="myGrid"&gt;&lt;/light-grid&gt;
+&lt;lg-grid model="myModel" id="myGrid"&gt;&lt;/lg-grid&gt;
 </pre>
 <h4>Fully HTML-compliant markup</h4>
 <pre>
-&lt;table data-light-grid id="myGrid" data-model="myModel"&gt;&lt;/table&gt;
+&lt;table data-lg-grid id="myGrid" data-model="myModel"&gt;&lt;/table&gt;
 </pre>
