--- a/Web/Views/Docs/lightGrid/lgColumnTemplates.cshtml
+++ b/Web/Views/Docs/lightGrid/lgColumnTemplates.cshtml
@@ -4,7 +4,7 @@
 
 <h3>Examples</h3>
 <pre ng-non-bindable>
-&lt;table data-light-grid id="sampleGrid" data-data="people"&gt;
+&lt;table data-lg-grid id="sampleGrid" data-model="people"&gt;
 	&lt;tr data-column-templates&gt;
 		&lt;td data-lg-column title="'First name'"&gt;{{rowData.firstName}}&lt;/td&gt;
 		&lt;td data-lg-column title="'Last name'"&gt;{{rowData.lastName}}&lt;/td&gt;
