Added lg prefix to samples; removed ngResource dependency

--- a/Web/Views/Demos/localEditableRow.cshtml
+++ b/Web/Views/Demos/localEditableRow.cshtml
@@ -30,11 +30,11 @@
 
 			<td lg-column width="16%">
 				<div lg-view>
-					<button class="btn btn-default btn-sm" switch-view="edit">Edit</button>
+					<button class="btn btn-default btn-sm" lg-switch-view="edit">Edit</button>
 				</div>
 				<div lg-view="edit">
-					<button class="btn btn-primary btn-sm" persist-data data-provider="dataProvider">Save</button>
-					<button class="btn btn-default btn-sm" switch-view="read">Cancel</button>
+					<button class="btn btn-primary btn-sm" lg-persist-data data-provider="dataProvider">Save</button>
+					<button class="btn btn-default btn-sm" lg-switch-view="read">Cancel</button>
 				</div>
 			</td>
 		</tr>
