--- a/Web/Views/Demos/serverSideProcessing.cshtml
+++ b/Web/Views/Demos/serverSideProcessing.cshtml
@@ -109,12 +109,12 @@
 			<td lg-column>
 				<div lg-view>
 					<button class="btn btn-default btn-sm" lg-switch-view="edit">Edit</button>
-					<button lg-toggle-expanded-row="detailsTemplate.html" class="btn btn-default btn-sm">Details</button>
+					<button class="btn btn-default btn-sm" lg-toggle-expanded-row="detailsTemplate.html">Details</button>
 				</div>
 				<div lg-view="edit">
 					<button class="btn btn-primary btn-sm" lg-persist-data data-provider="dataProvider">Save</button>
 					<button class="btn btn-default btn-sm" lg-switch-view="read">Cancel</button>
-					<button lg-toggle-expanded-row="detailsTemplate.html" class="btn btn-default btn-sm">Details</button>
+					<button class="btn btn-default btn-sm" lg-toggle-expanded-row="detailsTemplate.html">Details</button>
 				</div>
 			</td>
 		</tr>
