Displaying source code in demos

--- a/Web/Views/Demos/clientSidePaging.cshtml
+++ b/Web/Views/Demos/clientSidePaging.cshtml
@@ -15,15 +15,19 @@
 
 <h2>Client-side paging</h2>
 
-<div ng-controller="clientSidePagingController">
+<div ng-controller="clientSidePagingController" ng-non-bindable>
 	<lg-pager data-provider="dataProvider"></lg-pager>
 
 	<table lg-grid id="sampleGrid" class="table table-striped" model="dataProvider.getGridModel()">
-		<tr lg-column-templates>
-			<td lg-column title="'ID'">{{ rowData.id }}</td>
-			<td lg-column title="'Name'">{{ rowData.name }}</td>
-		</tr>
+		<tbody>
+			<tr lg-column-templates>
+				<td lg-column title="'ID'">{{ rowData.id }}</td>
+				<td lg-column title="'Name'">{{ rowData.name }}</td>
+			</tr>
+		</tbody>
 	</table>
 
 	<lg-pager data-provider="dataProvider"></lg-pager>
 </div>
+
+<source-display></source-display>
