--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
 		<title>Light Grid - @ViewBag.Title</title>
 		<link rel="shortcut icon" href="~/favicon.png"/>
 		@Styles.Render("~/Content/css")
+		@RenderSection("styles", false)
 	</head>
 	<body>
 	<a href="https://github.com/michaldudak/light-grid">
