--- a/Web/Views/Demos/clientSideSearch.cshtml
+++ b/Web/Views/Demos/clientSideSearch.cshtml
@@ -11,17 +11,21 @@
 
 <h2>Client-side search example</h2>
 
-<div ng-controller="clientSideSearchController">
+<div ng-controller="clientSideSearchController" ng-non-bindable>
 	<div class="btn-toolbar">
 		<div class="btn-group btn-group-sm">
 			<input type="text" ng-model="filterExpression" class="form-control" placeholder="type here to search" />
 		</div>
 	</div>
 	<table lg-grid id="sampleGrid" class="table table-striped" model="dataProvider.getGridModel()">
-		<tr lg-column-templates>
-			<td lg-column title="'Make'">{{ rowData.make }}</td>
-			<td lg-column title="'Model'">{{ rowData.model }}</td>
-			<td lg-column title="'Engine'">{{ rowData.engine }}</td>
-		</tr>
+		<tbody>
+			<tr lg-column-templates>
+				<td lg-column title="'Make'">{{ rowData.make }}</td>
+				<td lg-column title="'Model'">{{ rowData.model }}</td>
+				<td lg-column title="'Engine'">{{ rowData.engine }}</td>
+			</tr>
+		</tbody>
 	</table>
 </div>
+
+<source-display></source-display>
