--- a/Web/Views/Demos/localData.cshtml
+++ b/Web/Views/Demos/localData.cshtml
@@ -6,12 +6,16 @@
 
 <h2>Grid with a local data provider</h2>
 
-<div ng-controller="localDataGridController">
+<div ng-controller="localDataGridController" ng-non-bindable>
 	<table lg-grid id="sampleGrid" class="table table-striped" model="dataProvider.getGridModel()">
-		<tr lg-column-templates>
-			<td lg-column title="'Make'">{{ rowData.make }}</td>
-			<td lg-column title="'Model'">{{ rowData.model }}</td>
-			<td lg-column title="'Engine'">{{ rowData.engine }}</td>
-		</tr>
+		<tbody>
+			<tr lg-column-templates>
+				<td lg-column title="'Make'">{{ rowData.make }}</td>
+				<td lg-column title="'Model'">{{ rowData.model }}</td>
+				<td lg-column title="'Engine'">{{ rowData.engine }}</td>
+			</tr>
+		</tbody>
 	</table>
 </div>
+
+<source-display></source-display>
