--- a/Web/Views/Demos/serverSideProcessing.cshtml
+++ b/Web/Views/Demos/serverSideProcessing.cshtml
@@ -16,7 +16,7 @@
 	It is backed by an array with almost 30000 elements (US zip codes taken from <a rel="nofollow" href="http://jsonstudio.com/resources">http://jsonstudio.com/resources</a>).
 </p>
 
-<div ng-controller="serverSideProcessingController">
+<div ng-controller="serverSideProcessingController" ng-non-bindable>
 	<div class="btn-toolbar">
 		<div class="btn-group">
 			<input type="text" ng-model="filterExpression" ng-model-options="{debounce: 150}" class="form-control" placeholder="type here to search" />
@@ -39,85 +39,90 @@
 	</script>
 
 	<table lg-grid id="sampleGrid" class="table table-striped" model="dataProvider.getGridModel()">
-		<tr lg-column-templates>
-			<td lg-column>
-				<lg-header-view>
-					<span lg-sorter sort-property='city' data-provider='dataProvider'>City</span>
-				</lg-header-view>
-				<lg-view>
-					{{ rowData.city }}
-				</lg-view>
-				<lg-view view="edit">
-					<input ng-model="viewData.city" class="form-control input-sm" />
-				</lg-view>
-			</td>
-			<td lg-column>
-				<lg-header-view>
-					<span lg-sorter sort-property='state' data-provider='dataProvider'>State</span>
-				</lg-header-view>
-				<lg-view>
-					{{ rowData.state }}
-				</lg-view>
-				<lg-view view="edit">
-					<input ng-model="viewData.state" class="form-control input-sm" />
-				</lg-view>
-			</td>
-			<td lg-column>
-				<lg-header-view>
-					<span lg-sorter sort-property='_id' data-provider='dataProvider'>ZIP</span>
-				</lg-header-view>
-				<lg-view>
-					{{ rowData._id }}
-				</lg-view>
-				<lg-view view="edit">
-					<input ng-model="viewData._id" class="form-control input-sm" />
-				</lg-view>
-			</td>
-			<td lg-column>
-				<lg-header-view>
-					<span lg-sorter sort-property='loc[0]' data-provider='dataProvider'>Lat</span>
-				</lg-header-view>
-				<lg-view>
-					{{ rowData.loc[0] | number }}
-				</lg-view>
-				<lg-view view="edit">
-					<input type="number" ng-model="viewData.loc[0]" class="form-control input-sm" />
-				</lg-view>
-			</td>
-			<td lg-column title="'Longitude'">
-				<lg-header-view>
-					<span lg-sorter sort-property='loc[1]' data-provider='dataProvider'>Lon</span>
-				</lg-header-view>
-				<lg-view>
-					{{ rowData.loc[1] | number }}
-				</lg-view>
-				<lg-view view="edit">
-					<input type="number" ng-model="viewData.loc[1]" class="form-control input-sm" />
-				</lg-view>
-			</td>
-			<td lg-column>
-				<lg-header-view>
-					<span lg-sorter sort-property='pop' data-provider='dataProvider'>Population</span>
-				</lg-header-view>
-				<lg-view>
-					{{ rowData.pop }}
-				</lg-view>
-				<lg-view view="edit">
-					<input type="number" ng-model="viewData.pop" class="form-control input-sm" />
-				</lg-view>
-			</td>
-			<td lg-column>
-				<div lg-view>
-					<button class="btn btn-default btn-sm" lg-switch-view="edit">Edit</button>
-					<button class="btn btn-default btn-sm" lg-toggle-expanded-row="detailsTemplate.html">Details</button>
-				</div>
-				<div lg-view="edit">
-					<button class="btn btn-primary btn-sm" lg-persist-data data-provider="dataProvider">Save</button>
-					<button class="btn btn-default btn-sm" lg-switch-view="read">Cancel</button>
-					<button class="btn btn-default btn-sm" lg-toggle-expanded-row="detailsTemplate.html">Details</button>
-				</div>
-			</td>
-		</tr>
+		<tbody>
+			<tr lg-column-templates>
+				<td lg-column>
+					<lg-header-view>
+						<span lg-sorter sort-property='city' data-provider='dataProvider'>City</span>
+					</lg-header-view>
+					<lg-view>
+						{{ rowData.city }}
+					</lg-view>
+					<lg-view view="edit">
+						<input ng-model="viewData.city" class="form-control input-sm"/>
+					</lg-view>
+				</td>
+				<td lg-column>
+					<lg-header-view>
+						<span lg-sorter sort-property='state' data-provider='dataProvider'>State</span>
+					</lg-header-view>
+					<lg-view>
+						{{ rowData.state }}
+					</lg-view>
+					<lg-view view="edit">
+						<input ng-model="viewData.state" class="form-control input-sm"/>
+					</lg-view>
+				</td>
+				<td lg-column>
+					<lg-header-view>
+						<span lg-sorter sort-property='_id' data-provider='dataProvider'>ZIP</span>
+					</lg-header-view>
+					<lg-view>
+						{{ rowData._id }}
+					</lg-view>
+					<lg-view view="edit">
+						<input ng-model="viewData._id" class="form-control input-sm"/>
+					</lg-view>
+				</td>
+				<td lg-column>
+					<lg-header-view>
+						<span lg-sorter sort-property='loc[0]' data-provider='dataProvider'>Lat</span>
+					</lg-header-view>
+					<lg-view>
+						{{ rowData.loc[0] | number }}
+					</lg-view>
+					<lg-view view="edit">
+						<input type="number" ng-model="viewData.loc[0]" class="form-control input-sm"/>
+					</lg-view>
+				</td>
+				<td lg-column title="'Longitude'">
+					<lg-header-view>
+						<span lg-sorter sort-property='loc[1]' data-provider='dataProvider'>Lon</span>
+					</lg-header-view>
+					<lg-view>
+						{{ rowData.loc[1] | number }}
+					</lg-view>
+					<lg-view view="edit">
+						<input type="number" ng-model="viewData.loc[1]" class="form-control input-sm"/>
+					</lg-view>
+				</td>
+				<td lg-column>
+					<lg-header-view>
+						<span lg-sorter sort-property='pop' data-provider='dataProvider'>Population</span>
+					</lg-header-view>
+					<lg-view>
+						{{ rowData.pop }}
+					</lg-view>
+					<lg-view view="edit">
+						<input type="number" ng-model="viewData.pop" class="form-control input-sm"/>
+					</lg-view>
+				</td>
+				<td lg-column>
+					<div lg-view>
+						<button class="btn btn-default btn-sm" lg-switch-view="edit">Edit</button>
+						<button class="btn btn-default btn-sm" lg-toggle-expanded-row="detailsTemplate.html">Details</button>
+					</div>
+					<div lg-view="edit">
+						<button class="btn btn-primary btn-sm" lg-persist-data data-provider="dataProvider">Save</button>
+						<button class="btn btn-default btn-sm" lg-switch-view="read">Cancel</button>
+						<button class="btn btn-default btn-sm" lg-toggle-expanded-row="detailsTemplate.html">Details</button>
+					</div>
+				</td>
+			</tr>
+		</tbody>
 	</table>
+
 	<lg-pager data-provider="dataProvider" page-size-options="10,20,50,100"></lg-pager>
 </div>
+
+<source-display></source-display>
