--- a/Web/Views/Demos/simplest.cshtml
+++ b/Web/Views/Demos/simplest.cshtml
@@ -6,12 +6,16 @@
 
 <h2>The simplest grid</h2>
 
-<div ng-controller="simplestGridController">
+<div ng-controller="simplestGridController" ng-non-bindable>
 	<table lg-grid id="sampleGrid" class="table table-striped" model="model">
-		<tr lg-column-templates>
-			<td lg-column title="'Make'">{{ rowData.make }}</td>
-			<td lg-column title="'Model'">{{ rowData.model }}</td>
-			<td lg-column title="'Engine'">{{ rowData.engine }}</td>
-		</tr>
+		<tbody>
+			<tr lg-column-templates>
+				<td lg-column title="'Make'">{{ rowData.make }}</td>
+				<td lg-column title="'Model'">{{ rowData.model }}</td>
+				<td lg-column title="'Engine'">{{ rowData.engine }}</td>
+			</tr>
+		</tbody>
 	</table>
 </div>
+
+<source-display></source-display>
