--- a/Web/Views/Demos/sortableColumns.cshtml
+++ b/Web/Views/Demos/sortableColumns.cshtml
@@ -7,12 +7,16 @@
 
 <h2>Sortable columns</h2>
 
-<div ng-controller="sortableColumnsController">
+<div ng-controller="sortableColumnsController" ng-non-bindable>
 	<table lg-grid id="sampleGrid" class="table table-striped" model="dataProvider.getGridModel()">
-		<tr lg-column-templates>
-			<td lg-sortable-column property="make" title="'Make'" data-provider="dataProvider"></td>
-			<td lg-sortable-column property="model" title="'Model'" data-provider="dataProvider"></td>
-			<td lg-sortable-column property="engine" title="'Engine'" data-provider="dataProvider"></td>
-		</tr>
+		<tbody>
+			<tr lg-column-templates>
+				<td lg-sortable-column property="make" title="'Make'" data-provider="dataProvider"></td>
+				<td lg-sortable-column property="model" title="'Model'" data-provider="dataProvider"></td>
+				<td lg-sortable-column property="engine" title="'Engine'" data-provider="dataProvider"></td>
+			</tr>
+		</tbody>
 	</table>
 </div>
+
+<source-display></source-display>
