Added Philosophy to Overview

--- a/Web/Views/Home/Overview.cshtml
+++ b/Web/Views/Home/Overview.cshtml
@@ -18,3 +18,10 @@
 	<li>dynamic column visibility</li>
 	<li>inline data edit</li>
 </ul>
+
+<h2>Philosophy</h2>
+<p>
+	Light Grid was created with a simple principle in mind - a grid should just display data (in various formats).
+	Fetching objects from a remote server, paging, sorting, etc. should not be performed by a grid itself. That's why data providers were introduced.
+	Their job is to prepare data for the grid to display. This makes the code cleaner, and development is more fun.
+</p>
